infinite scroll doesn't infinite call

--- a/web/src/Entry/entry.scss
+++ b/web/src/Entry/entry.scss
@@ -6,7 +6,16 @@
     }
   }
 }
+.loader {
+  clear: both;
+}
 .entry-list {
+  position: fixed;
+  width: 350px;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  overflow: auto;
   li {
     list-style: none;
     padding: 0em 1.0em;
