--- a/web/src/Entry/entry.scss
+++ b/web/src/Entry/entry.scss
@@ -1,3 +1,5 @@
+body, html { height: 100%; }
+
 .entry {
   .editor {
     width: 50%;
@@ -6,36 +8,59 @@
     }
   }
 }
-.loader {
-  clear: both;
-}
-.entry-list {
+
+.sidebar {
   position: fixed;
   width: 350px;
+  height: 100%;
   top: 0;
   bottom: 0;
-  height: 100%;
   overflow: auto;
+  .loader {
+    clear: both;
+  }
+}
+
+.entry-list {
+
+  margin: 0em;
+  padding-left: 0em;
+  $even: rgb(241, 241, 241);
+  $odd: white;
   li {
-    list-style: none;
-    padding: 0em 1.0em;
+    background: $odd;
     position: relative;
-    height: 20em;
+    padding: 0.25em 1.0em;
+    height: 3.6em;
     overflow: hidden;
-    max-height: 20em;
-    transition: 0.25s max-height ease-in-out;
-    &:not(.selected) {
-      max-height: 3.6em;
-      :after {
+    list-style: none;
+    &:after {
+      pointer-events: none;
+      content: "";
+      text-align: right;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 3.2em;
+      background: linear-gradient(to bottom, rgba($odd, 0), rgba($odd, 1) 90%);
+    }
+    &:nth-child(even) {
+      background: $even;
+      &:after {
+        pointer-events: none;
         content: "";
         text-align: right;
         position: absolute;
         bottom: 0;
         right: 0;
         width: 100%;
-        height: 1.2em;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
+        height: 3.2em;
+        background: linear-gradient(to bottom, rgba($even, 0), rgba($even, 1) 90%);
       }
+    }
+    &.selected {
+      background: lightblue;
     }
   }
 }
